<resources>
    <string name="app_name">TaskApp</string>
    <string name="status_task_todo">Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Realizado</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fazer">Fazer</string>
    <string name="realizado">Realizado</string>
    <string name="fazendo">Fazendo</string>
    <string name="criar_nova_tela_de_login_do_app">Criar nova tela de Login do App</string>
    <string name="status">Status</string>
    <string name="descricao">Descrição</string>
    <string name="salvar">Salvar</string>
    <string name="nova_tarefa">Nova tarefa</string>

    <!-- Generic -->

    <string name="atencao">Atenção</string>
    <string name="entendi">Entendi</string>
    <string name="email_default">Preencha o campo de e-mail.</string>
    <string name="senha_default">Preencha o campo de senha.</string>
    <string name="erro_generic">Ocorreu um erro, tente novamente mais tarde.</string>
    <string name="text_list_task_empty">Nenhuma tarefa cadastrada.</string>
    <string name="text_load_task">Aguarde, estamos carregando as informações.</string>
    <string name="delet_task">Tarefa removida com sucesso</string>
    <string name="text_button_remove">Confirmar</string>
    <string name="text_title_remove">Deseja remover essa tarefa?</string>
    <string name="text_message_confirm">Aperte em confirmar para remover a tarefa</string>

    <!-- Register Fragment -->

    <string name="email_default_register">Preencha um e-mail válido.</string>
    <string name="senha_default_register">Preencha uma senha válida.</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="digite_a_sua_senha">Digite a sua senha</string>
    <string name="digite_seu_email">Digite o seu e-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="recuperar_conta">Recuperar conta</string>

    <!-- Home Fragment -->
    <string name="title_dialogo_logout">Deseja sair da sua conta?</string>
    <string name="text_dialogo_logout">Aperte em confirmar para sair da sua conta</string>
    <string name="text_dialogo_recover">Link de recuperação de senha enviado com sucesso para o seu e-mail.</string>

    <!-- Form Task Fragment -->

    <string name="descricao_default_task">Preencha uma descrição.</string>
    <string name="login">Login</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="detalhes">Detalhes</string>
    <string name="task_save">Tarefa salva com sucesso.</string>
    <string name="task_editando_tarefa">Editando tarefa...</string>
    <string name="task_editando_tarefa_sucesso">Tarefa atualizada com sucesso!</string>

    <!-- Erros Firebase Authentication -->

    <string name="account_not_registered">Nenhuma conta encontrada com esse e-mail, tente novamente!</string>
    <string name="invalid_email_register">Insira um e-mail válido</string>
    <string name="invalid_password_register">Insira uma senha válida</string>
    <string name="email_inUsed">Esse e-mail já está em uso</string>
    <string name="strong_password">Insira uma senha mais forte</string>

</resources>