<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="@color/orange"
        app:strokeWidth="2dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:padding="16dp">

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Criar layout da tela de login do app" />

            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_details"
                app:layout_constraintTop_toTopOf="@+id/btn_edit"
                app:tint="@color/orange" />

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_back"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toStartOf="@+id/btn_remover"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit"
                app:tint="@color/orange" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_remover"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/bg_btn"
                android:padding="0dp"
                android:text="@string/remover"
                android:textAllCaps="false"
                android:textSize="11sp"
                app:backgroundTint="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/bg_btn"
                android:padding="0dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/editar"
                android:textAllCaps="false"
                android:textSize="11sp"
                app:backgroundTint="@color/verde_agua_claro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_details"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_remover"
                app:layout_constraintTop_toBottomOf="@+id/textDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_details"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:padding="0dp"
                android:background="@drawable/bg_btn"
                android:text="@string/detalhes"
                android:textAllCaps="false"
                android:textSize="11sp"
                app:backgroundTint="@color/orange"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_edit"
                app:layout_constraintTop_toTopOf="@+id/btn_edit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>